<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:id="@+id/txv_bienvenido"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="14pt"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cuestionario_1"
        android:id="@+id/btn_tema1"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cuestionario_2"
        android:id="@+id/btn_tema2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cuestionario_3"
        android:id="@+id/btn_tema3"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cuestionario_4"
        android:id="@+id/btn_tema4"
        android:layout_gravity="center_horizontal" />
</LinearLayout>