<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edt_user_name_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_usuario"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edt_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/contraseña" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar" />

</LinearLayout>